--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "erusev/parsedown": "dev-master",
+        "erusev/parsedown": "1.7.5",
         "ext-dom": "*",
         "ext-libxml": "*",
         "ext-mbstring": "*",
